Ensure long tab titles don't overflow their container on smaller viewports.

--- a/grunt/sass/toolkit/components/_inPageNav.scss
+++ b/grunt/sass/toolkit/components/_inPageNav.scss
@@ -107,6 +107,7 @@
     float: left;
     padding: 0 30px 0 0;
     height: 44px;
+    max-width: 109%;
 
     @include box-sizing(border-box);
 
@@ -146,6 +147,7 @@
         border-bottom: 2px solid #0073c5;
       }
     }
+
 
     &:only-of-type {
       padding-right: 0;
